--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,5 +12,12 @@
   "startDrawing": "Start Drawing",
   "enterNumber": "Enter number of prizes",
   "generateSequence": "Auto Generate",
-  "invalidNumberError": "Please enter an integer"
+  "invalidNumberError": "Please enter an integer",
+  "seoTitle": "Lucky Draw Wheel | The Best Tool to Liven Up Your Event",
+  "seoDescription": "Use the Lucky Draw Wheel to win prizes and cash rewards! Come and try your luck now.",
+  "seoImageAlt": "Lucky Draw Wheel",
+  "congratulations": "Congratulations on winning",
+  "resultsTitle": "Results"
+
+
 }
