--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -12,5 +12,11 @@
   "startDrawing": "抽選を開始",
   "enterNumber": "賞品数を入力",
   "generateSequence": "自動生成",
-  "invalidNumberError": "整数を入力してください"
+  "invalidNumberError": "整数を入力してください",
+  "seoTitle": "ラッキー抽選ホイール | イベントを盛り上げる最高のツール",
+  "seoDescription": "ラッキー抽選ホイールを使って、賞品や賞金を獲得しよう！今すぐ運試しに挑戦してください。",
+  "seoImageAlt": "ラッキー抽選ホイール",
+  "congratulations": "おめでとうございます",
+  "resultsTitle": "結果"
+
 }   
