--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,7 +16,7 @@
   "seoTitle": "Lucky Draw Wheel | The Best Tool to Liven Up Your Event",
   "seoDescription": "Use the Lucky Draw Wheel to win prizes and cash rewards! Come and try your luck now.",
   "seoImageAlt": "Lucky Draw Wheel",
-  "congratulations": "Congratulations on winning",
+  "congratulations": "Congratulations",
   "resultsTitle": "Results"
 
 
