--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -17,7 +17,6 @@
   "seoDescription": "Use the Lucky Draw Wheel to win prizes and cash rewards! Come and try your luck now.",
   "seoImageAlt": "Lucky Draw Wheel",
   "congratulations": "Congratulations",
-  "resultsTitle": "Results"
-
-
+  "resultsTitle": "Results",
+  "spinDurationLabel": "Spin Duration"
 }
