--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -17,6 +17,6 @@
   "seoDescription": "ラッキー抽選ホイールを使って、賞品や賞金を獲得しよう！今すぐ運試しに挑戦してください。",
   "seoImageAlt": "ラッキー抽選ホイール",
   "congratulations": "おめでとうございます",
-  "resultsTitle": "結果"
-
+  "resultsTitle": "結果",
+  "spinDurationLabel": "回転時間"
 }   
