--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -17,5 +17,6 @@
   "seoDescription": "使用幸運抽獎輪盤，贏取獎品獎金！快來試試您的運氣吧。",
   "seoImageAlt": "幸運抽獎輪盤",
   "congratulations": "恭喜中獎",
-  "resultsTitle": "結果"
+  "resultsTitle": "結果",
+  "spinDurationLabel": "旋轉時間"
 }
